--- a/suporte.html
+++ b/suporte.html
@@ -18,7 +18,7 @@
   </section>
   <section>
     <h2>Contato</h2>
-    <p class="contato">E-mail: <a href="mailto:suporte@icred.com.br">suporte@icred.com.br</a></p>
+    <p class="contato">E-mail: <a href="mailto:suporte@icredfgts.com">suporte@icredfgts.com</a></p>
     <p class="contato">WhatsApp: <a href="https://wa.me/11993332219" target="_blank">(11) 99333-2219</a></p>
   </section>
   <section>
